<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_pkg_interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="k895657@kansai-u.ac.jp">han</maintainer>
  <license>TODO: License declaration</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- インターフェイスを生成するビルドツールのパッケージ -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <!-- ビルドを実行するパッケージ -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- このメンバーグループに入っているパッケージが必要である -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
